added artifacts json data and a service to retrieve it

--- a/src/app/artifacts/artifacts.component.html
+++ b/src/app/artifacts/artifacts.component.html
@@ -1,2 +1,2 @@
 <filter-artifacts></filter-artifacts>
-<app-artifacts-list></app-artifacts-list>
+<app-artifacts-list [artifacts]="artifacts"></app-artifacts-list>
