renamed components and added search filter for catalysts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
-    <app-artifacts></app-artifacts>
+    <app-catalysts></app-catalysts>
   </h1>
 </div>
 
