formatted hero data into toggle-able tables

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: Tahoma, sans-serif;
+    font-size: 0.5rem;
+    padding: 20px;
+}
+
+span, p {
+    font-size: 12px;
+}
