--- a/src/app/catalysts/catalysts-list/catalysts-list.component.html
+++ b/src/app/catalysts/catalysts-list/catalysts-list.component.html
@@ -1,9 +1,29 @@
-<div *ngFor="let hero of heroes">
-  <div>
-    {{ hero.name | titlecase }}
-    <span *ngFor="let catalyst of hero.catalysts">
-      {{ catalyst.id }}
-    </span>
-  </div>
+<div id="catalysts-list-wrapper" *ngFor="let hero of heroes">
+	<div class="hero-name-wrapper" (click)="toggleHeroData($event)">
+		<h2>{{ hero.name }}</h2>
+	</div>
+    <div class="hero-data-wrapper hide">
+        <div class="catalyst-names-wrapper">
+			<h5>Catalysts</h5>
+            <p *ngFor="let catalyst of hero.catalysts">{{ catalyst.id | spaceSeparate | titlecase }}</p> 
+        </div>
+        <div class="skills-wrapper">
+			<h5>Skills</h5>
+			<ng-container *ngFor="let catalyst of hero.catalysts">
+				<p *ngIf="catalyst.purposes.Skills; else addZero">{{ catalyst.purposes.Skills | sumNumbers }}</p>
+				<ng-template #addZero><p>0</p></ng-template>
+			</ng-container>
+        </div>
+        <div class="awakenings-wrapper">
+			<h5>Awakening</h5>
+			<ng-container *ngFor="let catalyst of hero.catalysts">
+				<p *ngIf="catalyst.purposes.Awakening; else addZero"> {{ catalyst.purposes.Awakening | sumNumbers }}</p>
+				<ng-template #addZero><p>0</p></ng-template>
+			</ng-container>
+		</div>
+		<div class="catalyst-locations-wrapper">
+			<h5>Locations</h5>
+		</div>
+    </div>
 </div>
 
