--- a/src/app/catalysts/catalysts-list/catalysts-list.component.scss
+++ b/src/app/catalysts/catalysts-list/catalysts-list.component.scss
@@ -1,5 +1,6 @@
 #catalysts-list-wrapper {
     margin: 20px 0;
+    min-width: 520px;
 
     .hero-name-wrapper {
         position: relative;
@@ -47,7 +48,7 @@
     grid-template-columns: 175px 100px 100px 1fr;  
 
     h5 {
-        margin-bottom: 5px;
+        //margin-bottom: 5px;
         border-bottom: 1px solid black;
     }
 }
@@ -56,7 +57,7 @@
 .skills-wrapper > p,
 .awakenings-wrapper > p,
 .catalyst-locations-wrapper > p {
-    margin: 5px 0;
+    margin: 10px 0;
 }
 
 .catalyst-names-wrapper {
@@ -73,4 +74,14 @@
 
 .catalyst-locations-wrapper {
     grid-area: locations;
+
+    .world-stage {
+        color: red,
+    }
+
+    span {
+        display: inline-block;
+        margin-right: 15px;
+        overflow: auto;
+    }
 }
