--- a/src/app/catalysts/catalysts.component.html
+++ b/src/app/catalysts/catalysts.component.html
@@ -1,5 +1,5 @@
 <div>
     <filter-catalysts (changed)="filter($event)"></filter-catalysts>
-    <app-catalysts-list [heroes]="filteredHeroes"></app-catalysts-list>
+    <app-catalysts-list [heroes]="filteredHeroes" [hideHeroData]="hideHeroData"></app-catalysts-list>
 </div>
     
