renamed files and restructured heroes/hero component html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+<div id="app-component-wrapper">
   <h1>
     Welcome to {{ title }}!
-    <app-catalysts></app-catalysts>
+    <app-heroes></app-heroes>
   </h1>
 </div>
 
