--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ body {
     font-family: Tahoma, sans-serif;
     font-size: 0.5rem;
     padding: 20px;
+    background: rgb(0, 183, 255);
 }
 
 span, p {
