--- a/src/app/heroes/hero/hero.component.scss
+++ b/src/app/heroes/hero/hero.component.scss
@@ -3,6 +3,10 @@
     grid-template-areas: "catalysts skills awakenings locations";
     grid-template-columns: 175px 100px 100px 1fr;  
 
+    @media only screen and (max-width: 750px) {
+        grid-template-columns: 155px 55px 90px 1fr;  
+    }
+
     h5 {
         //margin-bottom: 5px;
         border-bottom: 1px solid black;
