--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,6 +1,6 @@
 .hero-wrapper {
     margin: 20px 0;
-    min-width: 520px;
+    // min-width: 520px;
 
     .hero-name-wrapper {
         position: relative;
