--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,17 @@ body {
     font-family: Tahoma, sans-serif;
     font-size: 0.5rem;
     padding: 20px;
-    background: rgb(0, 183, 255);
 }
 
 span, p {
     font-size: 12px;
+}
+
+@media only screen and (max-width: 750px) {
+    body {
+        padding: 10px;
+    }
+    span, p {
+        font-size: 10px;
+    }
 }
