--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,13 @@
     margin: auto;
 }
 
+select {
+    cursor: pointer;
+    padding: 5px;
+    border: 1px solid red;
+    border-radius: 10px;
+}
+
 @media only screen and (max-width: 750px) {
     #app-component-wrapper {
         padding: 0px;
