--- a/src/app/catalysts/catalysts.component.html
+++ b/src/app/catalysts/catalysts.component.html
@@ -4,6 +4,7 @@
   <div class="catalyst-wrapper" *ngFor="let catalyst of filteredCatalysts; let i = index">
       <div class="catalyst-name-wrapper" (click)="hideCatalystData[i] = !hideCatalystData[i]">
         <div class="align-headers">
+          <img class="catalyst-icon" src="../../assets/images/{{catalyst.id}}.PNG" alt="catalyst.id + 'icon'"/>
           <h2 [ngClass]="{'flip': !hideCatalystData[i]}">{{ catalyst.id | spaceSeparate | titlecase }}</h2>
         </div>
       </div>
