--- a/src/app/catalysts/catalyst/catalyst.component.scss
+++ b/src/app/catalysts/catalyst/catalyst.component.scss
@@ -3,7 +3,7 @@
     grid-template-areas: "catalysts skills awakenings locations";
     grid-template-columns: 175px 100px 100px 1fr; 
     overflow: hidden;
-    max-height: 400px;
+    max-height: 1000px;
     -webkit-transition: max-height 0.5s; 
     -moz-transition: max-height 0.5s; 
     -ms-transition: max-height 0.5s; 
@@ -11,7 +11,7 @@
     transition: max-height 0.5s;  
 
     @media only screen and (max-width: 750px) {
-        grid-template-columns: 155px 55px 90px 1fr;  
+        grid-template-columns: 125px 55px 90px 115px;  
     }
 
     h5 {
