--- a/src/app/heroes/hero/hero.component.scss
+++ b/src/app/heroes/hero/hero.component.scss
@@ -3,7 +3,7 @@
     grid-template-areas: "catalysts skills awakenings locations";
     grid-template-columns: 175px 100px 100px 1fr; 
     overflow: hidden;
-    max-height: 400px;
+    max-height: 1000px;
     -webkit-transition: max-height 0.5s; 
     -moz-transition: max-height 0.5s; 
     -ms-transition: max-height 0.5s; 
@@ -11,7 +11,7 @@
     transition: max-height 0.5s;  
 
     @media only screen and (max-width: 750px) {
-        grid-template-columns: 155px 55px 90px 1fr;  
+        grid-template-columns: 165px 65px 90px 1fr;  
     }
 
     h5 {
@@ -23,7 +23,11 @@
     .skills-wrapper > p,
     .awakenings-wrapper > p,
     .catalyst-locations-wrapper > p {
-        margin: 13px 0;
+        margin: 10px 0;
+
+        @media only screen and (max-width: 750px) {
+            margin: 12px 0;
+        }
     }
 
     .catalyst-names-wrapper {
@@ -32,10 +36,13 @@
         .catalyst-icon-small {
             height: 20px;
             width: 20px;
+            margin-right: 3px;
         }
 
         p {
-            margin: 5px 0;
+            margin: 5px 0px;
+            display: flex;
+            align-items: center;
         }
     }
 
