--- a/src/app/heroes/hero/hero.component.scss
+++ b/src/app/heroes/hero/hero.component.scss
@@ -1,6 +1,11 @@
 .hero-data-wrapper {
     display: grid;
-    grid-template-areas: "catalysts skills awakenings locations";
+    grid-template-areas: 
+        "catalyst-header skills-header awakenings-header locations-header"
+        "catalysts0 skills0 awakenings0 locations0"
+        "catalysts1 skills1 awakenings1 locations1"
+        "catalysts2 skills2 awakenings2 locations2";
+        
     grid-template-columns: 175px 100px 100px 1fr; 
     overflow: hidden;
     max-height: 1000px;
@@ -19,10 +24,7 @@
         border-bottom: 1px solid black;
     }
 
-    .catalyst-names-wrapper > p,
-    .skills-wrapper > p,
-    .awakenings-wrapper > p,
-    .catalyst-locations-wrapper > p {
+    p {
         margin: 10px 0;
 
         @media only screen and (max-width: 750px) {
@@ -30,42 +32,43 @@
         }
     }
 
-    .catalyst-names-wrapper {
-        grid-area: catalysts;
+    .catalyst-header { grid-area: catalyst-header }
+    .skills-header { grid-area: skills-header }
+    .awakenings-header { grid-area: awakenings-header }
+    .locations-header { grid-area: locations-header }
 
-        .catalyst-icon-small {
-            height: 20px;
-            width: 20px;
-            margin-right: 3px;
+    @for $i from 0 through 2 {
+        .catalyst-names-wrapper#{$i} { 
+            grid-area: catalysts#{$i};
+            
+            p {
+                margin: 5px 0px;
+                display: flex;
+                align-items: center;
+            }
         }
+        
+        .skills-wrapper#{$i} { grid-area: skills#{$i} }
+        .awakenings-wrapper#{$i} { grid-area: awakenings#{$i} }
 
-        p {
-            margin: 5px 0px;
-            display: flex;
-            align-items: center;
+        .catalyst-locations-wrapper#{$i} { 
+            grid-area: locations#{$i};
+            .world-stage {
+                color: red,
+            }
+    
+            span {
+                display: inline-block;
+                margin-right: 15px;
+                overflow: auto;
+            }
         }
     }
-
-    .skills-wrapper {
-        grid-area: skills;
-    }
-
-    .awakenings-wrapper {
-        grid-area: awakenings;
-    }
-
-    .catalyst-locations-wrapper {
-        grid-area: locations;
-
-        .world-stage {
-            color: red,
-        }
-
-        span {
-            display: inline-block;
-            margin-right: 15px;
-            overflow: auto;
-        }
+    
+    .catalyst-icon-small {
+        height: 20px;
+        width: 20px;
+        margin-right: 3px;
     }
 }
 
