--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,13 +8,12 @@
 select {
     cursor: pointer;
     padding: 5px;
-    border: 1px solid red;
+    border: 2px solid lightgreen;
     border-radius: 10px;
 }
 
 @media only screen and (max-width: 750px) {
     #app-component-wrapper {
-        padding: 0px;
         min-width: 400px;
         max-width: 410px;
     }
