--- a/src/app/heroes/hero/hero.component.scss
+++ b/src/app/heroes/hero/hero.component.scss
@@ -9,6 +9,7 @@
     grid-template-columns: 190px 100px 100px 1fr; 
     overflow: hidden;
     max-height: 1000px;
+    background: rgba(255, 255, 255, 0.85);
     -webkit-transition: max-height 0.5s; 
     -moz-transition: max-height 0.5s; 
     -ms-transition: max-height 0.5s; 
